# AnsaDS

./: AlgorithmAPI.sln  AlgorithmAPI.vcxproj  AlgorithmAPI.vcxproj.filters  CMakeLists.txt  algorithms.hpp  main.cpp
AlgoTests/: AlgoTests.vcxproj  BinaryTreeTest.cpp  CMakeLists.txt  HeapTests.cpp  LinkedListTests.cpp  MathTests.cpp  PriorityQueueTests.cpp  SearchingTests.cpp  SetTests.cpp  SortTests.cpp  StackTest.cpp  VectorTests.cpp
src/: algorithms.hpp  binarytree.hpp  constraints.hpp  datastructures.hpp  formulas.hpp  heap.hpp  heapp.hpp  lfucache.hpp  linkedlist.hpp  node.hpp  pqueue.hpp  searching.hpp  set.hpp  sorting.hpp  stack.hpp  vector.hpp
